--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Direcci?n</h4>
+              <h4 class="text-uppercase m-0">Dirección</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">KM 40 A Chimaltenago Lote 30 <br> Villas Insbruck 2 zona 0,<br> Santo Domingo Xenacoj, Sacatepequez</div>
             </div>
           </div>
         </div>
@@ -205,15 +205,15 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Phone</h4>
+              <h4 class="text-uppercase m-0">Número</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50">+502 1212-1212</div>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="social d-flex justify-content-center">
+      <!-- <div class="social d-flex justify-content-center">
         <a href="#" class="mx-2">
           <i class="fab fa-twitter"></i>
         </a>
@@ -223,7 +223,7 @@
         <a href="#" class="mx-2">
           <i class="fab fa-github"></i>
         </a>
-      </div>
+      </div> -->
 
     </div>
   </section>
@@ -231,7 +231,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Your Website 2019
+      Copyright &copy; 2019 Agricola J.L By <a href="http://gomocreative.com" target="_blank" rel="noopener noreferrer">GoMoCreative</a>
     </div>
   </footer>
 
