--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">info@agricolajl.com</a>
+                <a href="mailto:info@agricolajl.com">info@agricolajl.com</a>
               </div>
             </div>
           </div>
@@ -207,7 +207,9 @@
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Número</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+502 1212-1212</div>
+              <div class="small text-black-50">
+                <a href="tel:">+502 1212-1212</a>
+              </div>
             </div>
           </div>
         </div>
