--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="gomocreative.com">
 
   <title>AGRICOLA J.L</title>
 
